--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
-  <script src="./main.js"></script>
+  <script src="js/main.js"></script>
 
   <title>Web Page</title>
 
-  <link rel='stylesheet' href='./styles.css' />
+  <link rel='stylesheet' href='css/styles.css' />
 </head>
 
 <body>
