added footer and h2 changes mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <div class="topDecoration"></div>
   <header>
     <h1 class="flexCenter"><strong>Urban Life Quality</strong></h1>
-    <h2 class="flexCenter"> Type a city name to know informations about life quality.</h2>
+    <h2 class="flexCenter"> Type a city name to know informations</br> about life quality.</h2>
   </header>
 
   <div class="flexCenter directionRow">
@@ -28,8 +28,8 @@
 
   </div>
 
-  <footer>
-
+  <footer class="flexCenter">
+    One page application made by Marco Dodaro © 2022 All rights reserved
   </footer>
 
 
