--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <div class="topDecoration"></div>
   <header>
     <h1 class="flexCenter"><strong>Urban Life Quality</strong></h1>
-    <h2 class="flexCenter"> Type a city name to know informations</br> about life quality.</h2>
+    <h2 class="flexCenter"> Type a city name to know informations <br class="responsive"/> about life quality.</h2>
   </header>
 
   <div class="flexCenter directionRow">
