changed categories display

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,8 @@
   <div id="errorMessageBox" class="flexCenter"></div>
 
   <div class="displayResults">
-
+    <div class="displayCategories"></div>
+    <div class="displayData"></div>
   </div>
 
   <footer class="flexCenter">
