--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
   </div>
 
   <footer class="flexCenter">
-    One page application made by Marco Dodaro © 2022 All rights reserved
+    Single page application made by Marco Dodaro © 2022 All rights reserved
   </footer>
 
 
