added autofocus to searchbar

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   </header>
 
   <div class="flexCenter directionRow">
-    <input id="input" class="searchBar" placeholder="Enter a city name..." type="text" autocomplete="off" />
+    <input id="input" class="searchBar" placeholder="Enter a city name..." type="text" autocomplete="off" autofocus/>
     <button id="submit" class="submitButton" type="submit"><i class="fa fa-search"></i></button>
   </div>
 
